testsuite/tests/interpreter_errors/invalid_property_access_nullable/test.out
main.adb
script.lkql:2:27: error: Invalid direct access on node of kind ConstantAbsent?
2 | objects[1].f_has_constant.p_get_attribute("attribute")
  |                           ^^^^^^^^^^^^^^^ 

